feat; challenge finished

--- a/src/app.css
+++ b/src/app.css
@@ -4,12 +4,18 @@
   --light-gray: hsl(212, 45%, 89%);
   --grayish-blue: hsl(220, 15%, 55%);
   --dark-blue: hsl(218, 44%, 22%);
+  --header-font-weight: 700;
+  --header-font-size: 1.4rem;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
 body {
   --background-color: var(--light-gray);
   min-height: 100vh;
-  margin: 0;
   background-color: var(--background-color);
   font-size: 15px;
 }
